# puco-EEFF

./: .env.example  .gitignore  README.md  pyproject.toml  setup_browser.sh
.github/prompts/: documentCodebaseFromLogic.prompt.md  remakeGuidedByRefactorTestsNoCheating.prompt.md  splitModuleByPurpose.prompt.md
.github/workflows/: ci.yml
config/: config.json  extraction_specs.json  reference_data.json  xbrl_specs.json
config/sheet1/: extraction.json  fields.json  reference_data.json  xbrl_mappings.json
config/sheet2/: extraction.json  fields.json  reference_data.json  xbrl_mappings.json
config/sheet3/: extraction.json  fields.json  reference_data.json  xbrl_mappings.json
data/processed/: sheet1_2024_QI.json  sheet1_2024_QII.json  sheet1_IIIQ2024.json  sheet1_IIIQ2025.json  sheet1_IIQ2024.json  sheet1_IIQ2025.json  sheet1_IQ2024.json  sheet1_IQ2025.json  sheet1_IVQ2024.json  sheet2_IIIQ2024.json  sheet2_IIIQ2025.json  sheet2_IIQ2024.json  sheet2_IIQ2025.json  sheet2_IQ2024.json  sheet2_IQ2025.json  sheet2_IVQ2024.json  sheet3_IIIQ2024.json  sheet3_IIIQ2025.json  sheet3_IIQ2024.json  sheet3_IIQ2025.json  sheet3_IQ2024.json  sheet3_IQ2025.json  sheet3_IVQ2024.json  xbrl_aggregates.json
data/raw/pdf/: estados_financieros_2024_Q2.xbrl  estados_financieros_2024_Q2.xml
data/raw/xbrl/: estados_financieros_2024_Q3.xbrl  estados_financieros_2024_Q4.xbrl  estados_financieros_2025_Q1.xbrl  estados_financieros_2025_Q2.xbrl  estados_financieros_2025_Q3.xbrl
instructions/: 01_download_all.md  01_download_pdf.md  02_download_xbrl.md  02_parse_xbrl.md  03_extract_detailed_costs.md  03_extract_sheet1.md  03_locate_sheet1.md  04_extract_sheet1.md  04_format_sheet1.md  05_format_sheet1.md  05_locate_sheet2.md  06_extract_sheet2.md  06_locate_sheet2.md  07_extract_sheet2.md  07_format_sheet2.md  08_format_sheet2.md  NN_combine_workbook.md  NN_troubleshooting.md  data_mapping.md  implementation_plan_config_cleanup.md
puco_eeff/: __init__.py  config.py  main_sheet1.py  main_sheet2.py  main_sheet3.py
puco_eeff/extractor/: __init__.py  cost_extractor.bak  cost_extractor.py  extraction.py  extraction_pipeline.py  ocr_fallback.py  ocr_mistral.py  pdf_parser.py  table_parser.py  validation.bak  validation_core.py  xbrl_parser.py
puco_eeff/extractor/validation/: __init__.py  format.py  formula.py  runner.py  types.py
puco_eeff/scraper/: __init__.py  browser.py  cmf_downloader.py  downloader.py  pdf_downloader.py  pucobre_downloader.py  xbrl_downloader.py
puco_eeff/sheets/: __init__.py  sheet1.py  sheet2.py  sheet3.py
puco_eeff/transformer/: __init__.py  formatter.py  normalizer.py  source_tracker.py
puco_eeff/utils/: __init__.py  parsing.py
puco_eeff/writer/: __init__.py  sheet_writer.py  workbook_combiner.py
temp/: test_parse.py
tests/: __init__.py  conftest.py  test_code_complexity.py  test_code_metrics.py  test_code_similarity.py  test_comment_density.py  test_config_integrity.py  test_cost_extractor.py  test_docstring_format.py  test_environment.py  test_formatter.py  test_sheet2.py  test_sheet3.py
tests/baselines/: codestral_ast_embeddings_cache.json.zlib  codestral_embeddings_cache.json.zlib  codestral_text_embeddings_cache.json.zlib  complexity_baselines.json  embeddings_cache.json.zlib  extractor_metrics.json  function_hashes.json  openai_ast_embeddings_cache.json.zlib  openai_text_embeddings_cache.json.zlib  similarity_baselines.json  voyage_ast_embeddings_cache.json.zlib  voyage_text_embeddings_cache.json.zlib
tests/similarity/: __init__.py  ast_helpers.py  checks.py  complexity.py  constants.py  embeddings.py  file_split.py  pca.py  populate_embeddings.py  refactor_index.py  storage.py  types.py
