[project]
name = "puco-eeff"
version = "0.1.0"
description = "Estados Financieros extraction pipeline for Pucobre - downloads PDFs and XBRL, extracts data via OCR, outputs Excel workbooks"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "Alvaro" }]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# Web scraping & browser automation
playwright = ">=1.49"
httpx = ">=0.28"

# PDF processing
pdfplumber = ">=0.11"

# XBRL/XML parsing
python-xbrl = ">=1.1"
arelle-release = ">=2.30"
lxml = ">=5.3"

# OCR APIs
mistralai = ">=1.2"
anthropic = ">=0.40"
openai = ">=1.57"

# Data processing & Excel output
pandas = ">=2.2"
openpyxl = ">=3.1"

# Configuration & CLI
python-dotenv = ">=1.0"
questionary = ">=2.0"
pymupdf = ">=1.26.6"
pyright = "^1.1.407"
voyageai = {version = ">=0.3.6", python = "<3.14"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-asyncio = ">=0.24"
black = ">=24.10"
isort = ">=5.13"
ruff = ">=0.8"
mypy = ">=1.13"
pandas-stubs = ">=2.2"
types-openpyxl = ">=3.1"
lxml-stubs = ">=0.5"
radon = ">=6.0"
numpy = ">=2.0"
complexipy = ">=5.0.0"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
# select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",      # Line too long (handled by formatter)
    "C901",      # Complex structure
    "PLR2004",   # Magic numbers
    "PLR0911",   # Too many returns
    "PLR0912",   # Too many branches
    "PLR0913",   # Too many arguments
    "PLR0915",   # Too many statements
    "S101",      # Assert statements (legitimate in tests)
    "FBT001",    # Boolean positional arg in function definition
    "FBT002",    # Boolean default value in function definition
    "FBT003",    # Boolean positional value in function call
    "TRY300",    # Consider else block (not always applicable)
    "D203",      # One blank line before class (conflicts with D211)
    "D213",      # Multi-line summary second line (conflicts with D212)
    "G004",      # Logging f-string (acceptable for readability)
    "TRY401",    # Verbose log message (redundant with good error handling)
    "D401",      # Non-imperative mood (docstrings can vary)
    "ERA001",    # Commented code (some comments are intentional)
    "PLW2901",   # Redefined loop name (sometimes intentional)
    "SLF001",    # Private member access (sometimes necessary)
    "PLC0415",   # Import outside top-level (lazy imports are intentional)
    "ANN401",    # Dynamically typed expressions (typing.Any) - sometimes necessary
    "ARG001",    # Unused function argument (interface compatibility, future use)
    "BLE001",    # Blind except (sometimes necessary for robustness)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",    # Missing type annotations in test functions
    "ANN201",    # Missing return type annotation
    "ANN202",    # Missing return type annotation for private functions
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "xbrl.*",
    "arelle.*",
    "questionary.*",
    "playwright.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "codestral: marks tests that use Codestral embeddings via OpenRouter",
    "voyage: marks tests that use Voyage AI embeddings",
]
